Version 2.0.4 -POssiply fixed overflow on mobile?

--- a/client/src/Styleshseets/style.scss
+++ b/client/src/Styleshseets/style.scss
@@ -13,6 +13,7 @@ body {
 }
 
 .cottage-app {
+  position: relative;
   overflow: hidden;
 }
 
